--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+            <directory>src/main/webapp</directory>
+            <targetPath>META-INF/resources</targetPath>
+            <includes>
+                <include>**/*.jsp</include>
+            </includes>
+            </resource>
+        </resources>
     </build>
 </project>
