--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <resources>
+        <!-- <resources>
             <resource>
             <directory>src/main/webapp</directory>
             <targetPath>META-INF/resources</targetPath>
@@ -74,6 +74,6 @@
                 <include>**/*.jsp</include>
             </includes>
             </resource>
-        </resources>
+        </resources> -->
     </build>
 </project>
